--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Shopping List App</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Grocery-App/CSS/style.css">
   </head>
   <body>
     <h1 id="myHeading">Shopping List App</h1>
